--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Bitcoin Wallet by djagya</title>
 
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
+          integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
     <meta name="viewport" content="width=device-width">
@@ -19,53 +22,81 @@
     </header>
 
     <section>
-        <h3>
-            <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span
-                    aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+        <div>
 
-        <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author
-            your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub
-                Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is
-            generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop,
-            simply sync your repository and you’ll see the new branch.</p>
+            <!-- Nav tabs -->
+            <ul class="nav nav-tabs" role="tablist">
+                <li role="presentation" class="active"><a href="#test-user-1" role="tab"
+                                                          data-toggle="tab">User 1</a></li>
+                <li role="presentation"><a href="#test-user-2" role="tab" data-toggle="tab">User
+                    2</a></li>
+                <li role="presentation"><a href="#fees" role="tab" data-toggle="tab">Address
+                    for fees</a></li>
+            </ul>
 
-        <h3>
-            <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span
-                    aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
+            <!-- Tab panes -->
+            <div class="tab-content">
+                <div role="tabpanel" class="tab-pane active" id="test-user-1">
+                    <p>
+                        <b>Address:</b> 2N8zvpPT3o8j4PEUNGfj59TzgYApUQefi6g <br>
+                        <b>Amount:</b> <span class="js-balance"></span>
+                    </p>
 
-        <p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse
-            through them. You can easily go back to edit your page before publishing. After publishing your page, you
-            can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+                    <form>
+                        <div class="form-group">
+                            <label for="address">Address</label>
+                            <input type="text" class="form-control" id="address"
+                                   value="2N8iBNLN9UVNoJtuoKpeM8JejXUuzFY6rcz" disabled>
+                        </div>
+                        <div class="form-group">
+                            <label for="amount">Amount</label>
+                            <input type="number" class="js-amount form-control" id="amount" value="0.0001">
+                        </div>
+                        <div class="form-group">
+                            <label for="total">Total amount (1% fee + transaction fee)</label>
+                            <input type="number" class="js-total form-control" id="total">
+                        </div>
 
-        <h3>
-            <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span
-                    aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
+                        <button type="submit" class="btn btn-default">Send</button>
+                    </form>
+                </div>
 
-        <p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your
-            repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support
-            Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and
-            footers without having to copy them across every page. It also offers intelligent blog support and other
-            advanced templating features.</p>
+                <div role="tabpanel" class="tab-pane" id="test-user-2">
+                    <p>
+                        <b>Address:</b> 2N8iBNLN9UVNoJtuoKpeM8JejXUuzFY6rcz <br>
+                        <b>Amount:</b> <span class="js-balance"></span>
+                    </p>
 
-        <h3>
-            <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span
-                    aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+                    <form>
+                        <div class="form-group">
+                            <label for="address2">Address</label>
+                            <input type="text" class="form-control" id="address2"
+                                   value="2N8zvpPT3o8j4PEUNGfj59TzgYApUQefi6g" disabled>
+                        </div>
+                        <div class="form-group">
+                            <label for="amount2">Amount</label>
+                            <input type="number" class="js-amount form-control" id="amount2" value="0.0001">
+                        </div>
+                        <div class="form-group">
+                            <label for="total2">Total amount (1% fee + transaction fee)</label>
+                            <input type="number" class="js-total form-control" id="total2">
+                        </div>
 
-        <p>You can <a
-                href="https://help.github.com/articles/basic-writing-and-formatting-syntax/#mentioning-users-and-teams"
-                class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting
-            <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris
-            Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a
-                    href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a
-                    href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+                        <button type="submit" class="btn btn-default">Send</button>
+                    </form>
+                </div>
 
-        <h3>
-            <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span
-                    aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
+                <div role="tabpanel" class="tab-pane" id="fees">
+                    <p>
+                        <b>Address:</b> 2NGXbdMNkVpprrFM34nSh7VQnAteagwncak <br>
+                        <b>Amount:</b> <span class="js-balance"></span>
+                    </p>
+                </div>
+            </div>
 
-        <p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a
-                href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+        </div>
     </section>
+
     <footer>
         <p>This project is maintained by <a href="https://github.com/djagya">djagya</a></p>
         <p>
@@ -74,7 +105,14 @@
         </p>
     </footer>
 </div>
-<script src="javascripts/scale.fix.js"></script>
 
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"
+        integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS"
+        crossorigin="anonymous"></script>
+<script src="javascripts/scale.fix.js"></script>
+<script src="javascripts/main.js"></script>
 </body>
 </html>
