--- a/index.html
+++ b/index.html
@@ -38,11 +38,14 @@
             <div class="tab-content">
                 <div role="tabpanel" class="tab-pane active" id="test-user-1">
                     <p>
-                        <b>Address:</b> 2N8zvpPT3o8j4PEUNGfj59TzgYApUQefi6g <br>
-                        <b>Amount:</b> <span class="js-balance"></span>
+                        <b>Address:</b> 2N8zvpPT3o8j4PEUNGfj59TzgYApUQefi6g
+                    </p>
+                    <p class="js-balance">
+                        <b>Amount:</b> <span class="balance"></span> <br>
+                        <b>Pending:</b> <span class="pending"></span>
                     </p>
 
-                    <form>
+                    <form action="http://localhost:8000" method="post">
                         <div class="form-group">
                             <label for="address">Address</label>
                             <input type="text" class="form-control" id="address"
@@ -63,11 +66,14 @@
 
                 <div role="tabpanel" class="tab-pane" id="test-user-2">
                     <p>
-                        <b>Address:</b> 2N8iBNLN9UVNoJtuoKpeM8JejXUuzFY6rcz <br>
-                        <b>Amount:</b> <span class="js-balance"></span>
+                        <b>Address:</b> 2N8iBNLN9UVNoJtuoKpeM8JejXUuzFY6rcz
+                    </p>
+                    <p class="js-balance">
+                        <b>Amount:</b> <span class="balance"></span> <br>
+                        <b>Pending:</b> <span class="pending"></span>
                     </p>
 
-                    <form>
+                    <form action="http://localhost:8000" method="post">
                         <div class="form-group">
                             <label for="address2">Address</label>
                             <input type="text" class="form-control" id="address2"
@@ -88,8 +94,11 @@
 
                 <div role="tabpanel" class="tab-pane" id="fees">
                     <p>
-                        <b>Address:</b> 2NGXbdMNkVpprrFM34nSh7VQnAteagwncak <br>
-                        <b>Amount:</b> <span class="js-balance"></span>
+                        <b>Address:</b> 2NGXbdMNkVpprrFM34nSh7VQnAteagwncak
+                    </p>
+                    <p class="js-balance">
+                        <b>Amount:</b> <span class="balance"></span> <br>
+                        <b>Pending:</b> <span class="pending"></span>
                     </p>
                 </div>
             </div>
