--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         <b>Pending:</b> <span class="pending"></span>
                     </p>
 
-                    <form action="http://localhost:8000?action=send&label=test-user-1" method="post">
+                    <form action="http://146.185.145.189?action=send&label=test-user-1" method="post">
                         <div class="form-group">
                             <label for="address">Address</label>
                             <input type="text" class="form-control" id="address"
@@ -74,7 +74,7 @@
                         <b>Pending:</b> <span class="pending"></span>
                     </p>
 
-                    <form action="http://localhost:8000?action=send&label=test-user-2" method="post">
+                    <form action="http://146.185.145.189?action=send&label=test-user-2" method="post">
                         <div class="form-group">
                             <label for="address2">Address</label>
                             <input type="text" class="form-control" id="address2"
