--- a/index.html
+++ b/index.html
@@ -60,7 +60,10 @@
                             <label for="total">Total amount (1% fee, transaction fee (0.0002) will be deducted from the
                                 receiver)</label>
                             <input type="text" class="js-total form-control" id="total" readonly>
-                            <input type="text" class="js-total-receiver form-control" readonly>
+                        </div>
+                        <div class="form-group">
+                            <label for="receiver">Receiver will get</label>
+                            <input type="text" class="js-total-receiver form-control" id="receiver" readonly>
                         </div>
 
                         <button type="submit" class="btn btn-default">Send</button>
@@ -91,7 +94,10 @@
                             <label for="total2">Total amount (1% fee, transaction fee (0.0002) will be deducted from the
                                 receiver)</label>
                             <input type="text" class="js-total form-control" id="total2" readonly>
-                            <input type="text" class="js-total-receiver form-control" readonly>
+                        </div>
+                        <div class="form-group">
+                            <label for="receiver2">Receiver will get</label>
+                            <input type="text" class="js-total-receiver form-control" id="receiver2" readonly>
                         </div>
 
                         <button type="submit" class="btn btn-default">Send</button>
