--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
                                    value="0.001" name="amount">
                         </div>
                         <div class="form-group">
-                            <label for="total">Total amount (1% fee, transaction fee (0.0002) will be deducted from the
+                            <label for="total">Total amount (1% fee (min 0.0001), transaction fee (0.0002) will be
+                                deducted from the
                                 receiver)</label>
                             <input type="text" class="js-total form-control" id="total" readonly>
                         </div>
@@ -91,7 +92,8 @@
                                    value="0.001" name="amount">
                         </div>
                         <div class="form-group">
-                            <label for="total2">Total amount (1% fee, transaction fee (0.0002) will be deducted from the
+                            <label for="total2">Total amount (1% fee (min 0.0001), transaction fee (0.0002) will be
+                                deducted from the
                                 receiver)</label>
                             <input type="text" class="js-total form-control" id="total2" readonly>
                         </div>
